[package]
name = "forger"
version = "0.1.0"
description = "yeah."
repository = "https://github.com/misilelaboratory/forger"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.22.0"
serde = { version = "1.0.137", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }